Linux script can now read from setting file